add_subdirectory(0185_0004)
add_subdirectory(0185_0006)
add_subdirectory(0185_0007)
add_subdirectory(0185_0008)
add_subdirectory(0185_0012)
add_subdirectory(0185_0063)
add_subdirectory(0185_0064)
add_subdirectory(0185_0073)
add_subdirectory(0185_0084)
add_subdirectory(0185_0085)
add_subdirectory(0185_0086)
add_subdirectory(0185_0087)
add_subdirectory(0185_0088)
add_subdirectory(0185_0091)
add_subdirectory(0185_0095)
add_subdirectory(0185_0098)
add_subdirectory(0185_0101)
add_subdirectory(0185_0110)
add_subdirectory(0185_0111)
add_subdirectory(0185_0112)
add_subdirectory(0185_0113)
add_subdirectory(0185_0114)
add_subdirectory(0185_0126)
add_subdirectory(0185_0129)
add_subdirectory(0185_0138)
add_subdirectory(0185_0139)
add_subdirectory(0185_0140)
add_subdirectory(0185_0141)
add_subdirectory(0185_0142)
llvm_singlesource_compile_only_file(0185_0123.c PREFIX "Fujitsu-C-")
llvm_singlesource_fujitsu(PREFIX "Fujitsu-C-")
set_property(TARGET Fujitsu-C-0185_0123 APPEND PROPERTY LINK_LIBRARIES "pthread")
