if (OpenMP_${LANG}_FOUND)
add_subdirectory(0188_0000)
add_subdirectory(0188_0001)
add_subdirectory(0188_0002)
add_subdirectory(0188_0003)
add_subdirectory(0188_0004)
add_subdirectory(0188_0005)
add_subdirectory(0188_0006)
add_subdirectory(0188_0007)
add_subdirectory(0188_0008)
add_subdirectory(0188_0009)
endif()
add_subdirectory(0188_0010)
add_subdirectory(0188_0011)
if (OpenMP_${LANG}_FOUND)
add_subdirectory(0188_0012)
add_subdirectory(0188_0013)
add_subdirectory(0188_0014)
add_subdirectory(0188_0015)
add_subdirectory(0188_0016)
add_subdirectory(0188_0017)
add_subdirectory(0188_0018)
add_subdirectory(0188_0019)
add_subdirectory(0188_0020)
add_subdirectory(0188_0021)
add_subdirectory(0188_0022)
add_subdirectory(0188_0023)
add_subdirectory(0188_0024)
add_subdirectory(0188_0025)
add_subdirectory(0188_0026)
add_subdirectory(0188_0027)
add_subdirectory(0188_0028)
add_subdirectory(0188_0029)
add_subdirectory(0188_0030)
add_subdirectory(0188_0031)
add_subdirectory(0188_0032)
add_subdirectory(0188_0033)
add_subdirectory(0188_0034)
add_subdirectory(0188_0035)
add_subdirectory(0188_0036)
add_subdirectory(0188_0037)
add_subdirectory(0188_0038)
add_subdirectory(0188_0039)
add_subdirectory(0188_0040)
add_subdirectory(0188_0041)
add_subdirectory(0188_0042)
add_subdirectory(0188_0043)
add_subdirectory(0188_0044)
add_subdirectory(0188_0045)
add_subdirectory(0188_0046)
add_subdirectory(0188_0047)
add_subdirectory(0188_0048)
add_subdirectory(0188_0049)
add_subdirectory(0188_0050)
add_subdirectory(0188_0051)
add_subdirectory(0188_0052)
add_subdirectory(0188_0053)
add_subdirectory(0188_0054)
add_subdirectory(0188_0055)
add_subdirectory(0188_0056)
add_subdirectory(0188_0057)
add_subdirectory(0188_0058)
add_subdirectory(0188_0059)
add_subdirectory(0188_0060)
add_subdirectory(0188_0061)
add_subdirectory(0188_0062)
add_subdirectory(0188_0063)
add_subdirectory(0188_0064)
add_subdirectory(0188_0065)
endif()
