add_subdirectory(0198_0001)
add_subdirectory(0198_0002)
add_subdirectory(0198_0003)
add_subdirectory(0198_0004)
add_subdirectory(0198_0005)
add_subdirectory(0198_0006)
add_subdirectory(0198_0007)
add_subdirectory(0198_0008)
add_subdirectory(0198_0009)
add_subdirectory(0198_0010)
add_subdirectory(0198_0011)
add_subdirectory(0198_0012)
add_subdirectory(0198_0013)
add_subdirectory(0198_0014)
add_subdirectory(0198_0015)
add_subdirectory(0198_0016)
add_subdirectory(0198_0017)
add_subdirectory(0198_0018)
add_subdirectory(0198_0019)
add_subdirectory(0198_0020)
add_subdirectory(0198_0021)
add_subdirectory(0198_0022)
add_subdirectory(0198_0023)
add_subdirectory(0198_0024)
add_subdirectory(0198_0025)
add_subdirectory(0198_0026)
add_subdirectory(0198_0027)
add_subdirectory(0198_0028)
add_subdirectory(0198_0029)
add_subdirectory(0198_0030)
add_subdirectory(0198_0031)
add_subdirectory(0198_0032)
add_subdirectory(0198_0033)
add_subdirectory(0198_0034)
add_subdirectory(0198_0035)
add_subdirectory(0198_0036)
add_subdirectory(0198_0037)
add_subdirectory(0198_0038)
add_subdirectory(0198_0039)
add_subdirectory(0198_0040)
add_subdirectory(0198_0041)
add_subdirectory(0198_0042)
add_subdirectory(0198_0043)
add_subdirectory(0198_0044)
add_subdirectory(0198_0045)
add_subdirectory(0198_0046)
add_subdirectory(0198_0047)
add_subdirectory(0198_0048)
add_subdirectory(0198_0049)
add_subdirectory(0198_0050)
add_subdirectory(0198_0051)
add_subdirectory(0198_0052)
add_subdirectory(0198_0053)
add_subdirectory(0198_0054)
add_subdirectory(0198_0055)
add_subdirectory(0198_0056)
add_subdirectory(0198_0057)
add_subdirectory(0198_0058)
add_subdirectory(0198_0059)
add_subdirectory(0198_0060)
add_subdirectory(0198_0061)
add_subdirectory(0198_0062)
add_subdirectory(0198_0063)
add_subdirectory(0198_0064)
add_subdirectory(0198_0065)
add_subdirectory(0198_0066)
add_subdirectory(0198_0067)
add_subdirectory(0198_0068)
add_subdirectory(0198_0069)
add_subdirectory(0198_0070)
add_subdirectory(0198_0071)
add_subdirectory(0198_0072)
add_subdirectory(0198_0073)
add_subdirectory(0198_0074)
add_subdirectory(0198_0075)
add_subdirectory(0198_0076)
add_subdirectory(0198_0077)
llvm_singlesource_fujitsu(PREFIX "Fujitsu-C-")
set_property(SOURCE 0198_0000.c APPEND PROPERTY COMPILE_OPTIONS "-finline-functions")
